--- a/my-netlogo.html
+++ b/my-netlogo.html
@@ -18,8 +18,8 @@
 
           // System properties (only basic ones supported)
           cheerpjSetSystemProperty("file.encoding", "UTF-8");
-          cheerpjSetSystemProperty("netlogo.models.dir", "/models");
-          cheerpjSetSystemProperty("netlogo.extensions.dir", "/extensions");
+          cheerpjSetSystemProperty("netlogo.models.dir", "/netlogo/models");
+          cheerpjSetSystemProperty("netlogo.extensions.dir", "/netlogo/extensions");
 
           // Create display for GUI apps (NetLogo uses Swing)
           cheerpjCreateDisplay(1024, 768);
